--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -21,7 +21,9 @@ th {
 thead, tbody, tfoot, tr, td, th {
 	padding: 14px !important;
 }
-
+tr:last-child {
+    border-bottom: #fff;
+}
 /*mobile only*/
 @media only screen and (max-width: 767px) {
 	.w-25, .w-75{
